cmake_minimum_required(VERSION 3.21)
project(LABS_100)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(LAB1 LAB01/jhernandez613.cpp)
add_executable(LAB2 LAB02/jhernandez613_1.cpp)
add_executable(LAB3 LAB03/jhernandez613_2.cpp)
add_executable(LAB4_1 LAB04_1/jhernandez613_3.cpp)
add_executable(LAB4_2 LAB04_2/jhernandez613_4.cpp)
add_executable(LAB5 LAB05/jhernandez613_5.cpp)
add_executable(LAB6 LAB06/jhernandez613_6.cpp)
